--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                and SQL. Proficient in API data extraction with python requests, and experienced in end-to-end ML projects with cloud integration through Render, delivering valuable insights with engaging visualizations. Also, adept at creating beautiful and interactive dashboards with Power BI and Tableau.
             </p>
             <div class="button">
-              <a href="Images/SM_Afraim_CV.pdf" download class="download-button">Download CV</a>
+              <a href="pdfs\SM_AfraimCV.pdf" download class="download-button">Download CV</a>
             </div>
           </div>
         </div>
@@ -168,11 +168,13 @@ Render
             </div>
             <div class="topic" style="background-image: url('Images\proj1.png');">
             <a href="https://www.kaggle.com/code/syedmohammadafraim2/case-study-bellabeat-using-pythons-3d-plots">Case Study-1</div></a>
-            <p>Data Analysis on Bellabeat</p>
+            <p>Data Analysis on Bellabeat</p> </br>
             <p>👉Tools used:</br>
             Python | Matplotlib | Seaborn | Plotly ex | Tableau </br>
             </p>
-            <p>👉Goal:The goal of the data analysis on Bellabeat was to explore and 
+            <p>👉Goal:</br>
+              
+              The goal of the data analysis on Bellabeat was to explore and 
               analyze the relationship between calories, total steps walked, heart rates and its influence on the buying behavior 
               and growth of Bellabeat products. By leveraging data-driven insights and statistical analysis, 
               the objective by me was to identify especially the patterns and correlations between heart rate data and
@@ -184,7 +186,8 @@ Render
               </p>
             <p><div class="media-icons">
               <a href = "https://www.kaggle.com/code/syedmohammadafraim2/case-study-bellabeat-using-pythons-3d-plots"><i class="fa-brands fa-kaggle fa-flip"></i></a>    |
-              <a href= "https://github.com/Shikamaru77/Data-Analytics-Bellabeat-Case-Study"><i class="fa-brands fa-github" style="color: #353a47;"></i></a>
+              <a href= "https://github.com/Shikamaru77/Data-Analytics-Bellabeat-Case-Study"><i class="fa-brands fa-github" ></i></a> |
+              <a href= "https://public.tableau.com/app/profile/syed.mohammad.afraim/viz/BellabeatDataAnalysisCaseStudy_16906532777260/CoverPage"><i class="fa-solid fa-plus"></i></a>
             </div> </p>
           </div>
           <div class="box">
@@ -193,9 +196,12 @@ Render
             </div>
             <div class="topic">Case Study-2</div>
             <p>Cyclist bike share analysis</p>
+            <p>👉Tools used:</br>
+              Python | SQL | Matplotlib | Seaborn | Plotly ex | Tableau </br>
+              </p>
             <p><div class="media-icons">
               <a href = ""><i class="fa-brands fa-kaggle fa-flip"></i></a>    |
-              <a href= ""><i class="fa-brands fa-github" style="color: #353a47;"></i></a>
+              <a href= ""><i class="fa-brands fa-github"></i></a>
             </div> </p>
           </div>
           <div class="box">
@@ -206,7 +212,7 @@ Render
             <p><a href = "https://bd-aqi.onrender.com/">Bangladesh AQI prediction</p></a>
             <p><div class="media-icons">
               <a href = "https://www.kaggle.com/code/syedmohammadafraim2/bangladesh-aqi-prediction"><i class="fa-brands fa-kaggle fa-flip"></i></a>    |
-              <a href= "https://github.com/Shikamaru77/BD_AQI"><i class="fa-brands fa-github" style="color: #353a47;"></i></a>
+              <a href= "https://github.com/Shikamaru77/BD_AQI"><i class="fa-brands fa-github"></i></a>
             </div> </p>
           </div>
           <div class="box">
@@ -218,7 +224,7 @@ Render
             <a href = ""><p>An end to end flight fare prediction</p></a>
             <p><div class="media-icons">
               <a href = "https://www.kaggle.com/code/syedmohammadafraim2/flight-fare-prediction"><i class="fa-brands fa-kaggle fa-flip"></i></a>    |
-              <a href= "https://github.com/Shikamaru77/Flights-fare-prediction"><i class="fa-brands fa-github" style="color: #353a47;"></i></a>
+              <a href= "https://github.com/Shikamaru77/Flights-fare-prediction"><i class="fa-brands fa-github"></i></a>
             </div> </p>
           </div>
           <div class="box">
@@ -229,7 +235,7 @@ Render
             <p>An end to end fruits detection</p>
             <p><div class="media-icons">
               <a href = ""><i class="fa-brands fa-kaggle fa-flip"></i></a>    |
-              <a href= ""><i class="fa-brands fa-github" style="color: #353a47;"></i></a>
+              <a href= ""><i class="fa-brands fa-github"></i></a>
             </div> </p>
           </div>
           <div class="box">
@@ -240,7 +246,7 @@ Render
             <p>Handwritten Formulaes Recognition</p>
             <p><div class="media-icons">
               <a href = ""><i class="fa-brands fa-kaggle fa-flip"></i></a>    |
-              <a href= ""><i class="fa-brands fa-github" style="color: #353a47;"></i></a>
+              <a href= ""><i class="fa-brands fa-github"></i></a>
             </div> </p>
           </div>
         </div>
