--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <head>
     <meta charset="UTF-8" />
     <title>Afraim- Portfolio</title>
+    <link rel="icon" href="pdfs\favv.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="pdfs\favv.ico" type="image/x-icon">
+
     <link rel="stylesheet" href="style.css" />
     <!-- Fontawesome CDN Link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
